--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Roll a D20!</title>
+    <!-- fonts here -->
+    <!-- stylesheet here -->
 </head>
 <body>
-    
+    <h1>Roll a D20!</h1>
+    <!-- <div>
+        THIS WILL BE THE ACTUAL DIE
+    </div> -->
+    <!-- <form action="">
+        THIS WILL BE THE MODIFIER
+    </form> -->
 </body>
 </html>
