--- a/index.html
+++ b/index.html
@@ -5,16 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Roll a D20!</title>
-    <!-- fonts here -->
-    <!-- stylesheet here -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Slab:100,400,700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Roll a D20!</h1>
-    <!-- <div>
-        THIS WILL BE THE ACTUAL DIE
-    </div> -->
-    <!-- <form action="">
-        THIS WILL BE THE MODIFIER
-    </form> -->
+    <wrapper>
+        <header>
+            <h1>Roll a D20!</h1>
+        </header>
+        <div class="d20">
+            <div>
+                THIS WILL BE THE ACTUAL DIE
+            </div>
+            <p>Click the die to roll it</p>
+        </div>
+        <div class="modifier">
+            <form action="">
+                THIS WILL BE THE MODIFIER
+            </form>
+        </div>
+        <div class="finalScore">
+            <p>Final roll:</p>
+        </div>
+        <p><a href="https://en.wikipedia.org/wiki/D20_System"><em>What would I use this for?</em></a></p>
+        <footer>
+            <p>Copyright © Jessica Chin</p>
+        </footer>
+    </wrapper>
 </body>
 </html>
