--- a/index.html
+++ b/index.html
@@ -7,21 +7,26 @@
     <title>Roll a D20!</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Slab:100,400,700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/7b8d56d327.js"></script>
 </head>
 <body>
     <wrapper>
         <header>
-            <h1>Roll a D20!</h1>
+            <h1><i class="fas fa-dice-d20"></i> Roll a D20! <i class="fas fa-dice-d20"></i></h1>
         </header>
         <div class="d20">
             <div>
-                THIS WILL BE THE ACTUAL DIE
+                <p>
+                    THIS WILL BE THE ACTUAL DIE
+                </p>
             </div>
             <p>Click the die to roll it</p>
         </div>
         <div class="modifier">
             <form action="">
-                THIS WILL BE THE MODIFIER
+                <p>
+                    THIS WILL BE THE MODIFIER
+                </p>
             </form>
         </div>
         <div class="finalScore">
