--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Roll a D20!</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Slab:100,400,700&display=swap" rel="stylesheet"> 
+    <link type="image/png" href="assets/favicon-2.png" rel="icon">
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://kit.fontawesome.com/7b8d56d327.js"></script>
 </head>
