--- a/index.html
+++ b/index.html
@@ -15,25 +15,24 @@
         <header>
             <h1><i class="fas fa-dice-d20"></i> Roll a D20! <i class="fas fa-dice-d20"></i></h1>
         </header>
-        <div class="d20">
+        <section class="d20">
             <div>
-                <p>
-                    THIS WILL BE THE ACTUAL DIE
-                </p>
+                <div class=d20>
+                </div>
+                <p>Click the die to roll it</p>
             </div>
-            <p>Click the die to roll it</p>
-        </div>
-        <div class="modifier">
+        </section>
+        <section class="modifier">
             <form action="">
                 <p>
                     THIS WILL BE THE MODIFIER
                 </p>
             </form>
-        </div>
-        <div class="finalScore">
+        </section>
+        <section class="finalScore">
             <p>Final roll:</p>
-        </div>
-        <p><a href="https://en.wikipedia.org/wiki/D20_System"><em>What would I use this for?</em></a></p>
+        </section>
+        <p class="wtf"><a href="https://en.wikipedia.org/wiki/D20_System"><em>What would I use this for?</em></a></p>
         <footer>
             <p>Copyright © Jessica Chin</p>
         </footer>
