--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link type="image/png" href="assets/favicon-2.png" rel="icon">
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://kit.fontawesome.com/7b8d56d327.js"></script>
+    <script src="scripts/script.js"></script>
 </head>
 <body>
     <wrapper>
@@ -16,11 +17,11 @@
             <h1><i class="fas fa-dice-d20"></i> Roll a D20! <i class="fas fa-dice-d20"></i></h1>
         </header>
         <section class="d20">
-            <div>
+            <div class="d20Wrapper">
                 <div class=d20>
                 </div>
-                <p>Click the die to roll it</p>
             </div>
+                <p>Click the die to roll it</p>
         </section>
         <section class="modifier">
             <form action="">
@@ -37,5 +38,7 @@
             <p>Copyright © Jessica Chin</p>
         </footer>
     </wrapper>
+    
+    <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
 </body>
 </html>
