--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
         </header>
         <section class="d20">
             <div class="d20Wrapper">
-                <div class=d20>
+                <div class="20SidedDie">
                 </div>
             </div>
-                <p>Click the die to roll it</p>
+                <!-- <p>Click the die to roll it</p> -->
         </section>
-        <section class="modifier">
+        <!-- <section class="modifier">
             <form action="">
                 <p>
                     THIS WILL BE THE MODIFIER
                 </p>
             </form>
-        </section>
-        <section class="finalScore">
+        </section> -->
+        <!-- <section class="finalScore">
             <p>Final roll:</p>
-        </section>
+        </section> -->
         <p class="wtf"><a href="https://en.wikipedia.org/wiki/D20_System"><em>What would I use this for?</em></a></p>
         <footer>
             <p>Copyright © Jessica Chin</p>
