--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <header>
             <h1><i class="fas fa-dice-d20"></i> Roll a D20! <i class="fas fa-dice-d20"></i></h1>
         </header>
-        <section class="d20">
+        <section class="d20 rotating">
             <div class="d20Wrapper">
                 <div class="20SidedDie">
                 </div>
             </div>
-                <!-- <p>Click the die to roll it</p> -->
         </section>
+        <p class="clickPrompt">Click the die to roll it</p>
         <!-- <section class="modifier">
             <form action="">
                 <p>
