added drop down menu

--- a/index.html
+++ b/index.html
@@ -25,19 +25,36 @@
             </div>
         </section>
         <p class="clickPrompt">Click the die to roll it</p>
-        <!-- <section class="modifier">
+        <section class="modifier">
             <form action="">
-                <p>
-                    THIS WILL BE THE MODIFIER
-                </p>
+                <select name="modifierMenu">
+                    <option value="--">Add a modifier</option>
+                    <option value="-5">-5</option>
+                    <option value="-4">-4</option>
+                    <option value="-3">-3</option>
+                    <option value="-2">-2</option>
+                    <option value="-1">-1</option>
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
+                <button>Add me!</button>
             </form>
-        </section> -->
+        </section>
         <!-- <section class="finalScore">
             <p>Final roll:</p>
         </section> -->
         <p class="wtf"><a href="https://en.wikipedia.org/wiki/D20_System"><em>What would I use this for?</em></a></p>
         <footer>
-            <p>Copyright © Jessica Chin</p>
+            <p>Copyright © 2019 Jessica Chin</p>
         </footer>
     </wrapper>
     
