5:53 p.m. Thursday added math random math floor

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <option value="9">9</option>
                     <option value="10">10</option>
                 </select>
-                <button>Add me!</button>
+                <button type="submit">Add me!</button>
             </form>
         </section>
         <!-- <section class="finalScore">
