--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <button type="submit">Add me!</button>
             </form>
         </section>
-        <!-- <section class="finalScore">
-            <p>Final roll:</p>
-        </section> -->
+        <section class="finalScore">
+            <p class="finalRoll">Final roll:<span class="emptyValue"></span></p>
+        </section>
         <p class="wtf"><a href="https://en.wikipedia.org/wiki/D20_System"><em>What would I use this for?</em></a></p>
         <footer>
             <p>Copyright © 2019 Jessica Chin</p>
