8:43 p.m. Thursday click functions done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </section>
-        <p class="clickPrompt">Click the die to roll it</p>
+        <p class="clickPrompt"></p>
         <section class="modifier">
             <form action="">
                 <select name="modifierMenu">
@@ -50,7 +50,7 @@
             </form>
         </section>
         <section class="finalScore">
-            <p class="finalRoll">Final roll:<span class="emptyValue"></span></p>
+            <p class="finalRoll">Final roll: <span class="emptyValue"></span></p>
         </section>
         <p class="wtf"><a href="https://en.wikipedia.org/wiki/D20_System"><em>What would I use this for?</em></a></p>
         <footer>
