12:07 p.m. Friday commit - finding scope issues with button click

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
         <p class="clickPrompt"></p>
         <section class="modifier">
-            <form action="">
+            <form action="" input type="number">
                 <select name="modifierMenu">
                     <option value="--">Add a modifier</option>
                     <option value="-5">-5</option>
