3:16 p.m. Friday commit, two numbers adding together!

--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
         <section class="modifier">
             <form action="" input type="number">
                 <select name="modifierMenu">
-                    <option value="--">Add a modifier</option>
-                    <option value="-5">-5</option>
-                    <option value="-4">-4</option>
-                    <option value="-3">-3</option>
-                    <option value="-2">-2</option>
-                    <option value="-1">-1</option>
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
+                    <option value="null">Add a modifier</option>
+                    <option class="modifierNumber" value="-5">-5</option>
+                    <option class="modifierNumber" value="-4">-4</option>
+                    <option class="modifierNumber" value="-3">-3</option>
+                    <option class="modifierNumber" value="-2">-2</option>
+                    <option class="modifierNumber" value="-1">-1</option>
+                    <option class="modifierNumber" value="0">0</option>
+                    <option class="modifierNumber" value="1">+1</option>
+                    <option class="modifierNumber" value="2">+2</option>
+                    <option class="modifierNumber" value="3">+3</option>
+                    <option class="modifierNumber" value="4">+4</option>
+                    <option class="modifierNumber" value="5">+5</option>
+                    <option class="modifierNumber" value="6">+6</option>
+                    <option class="modifierNumber" value="7">+7</option>
+                    <option class="modifierNumber" value="8">+8</option>
+                    <option class="modifierNumber" value="9">+9</option>
+                    <option class="modifierNumber" value="10">+10</option>
                 </select>
                 <button type="submit">Add me!</button>
             </form>
