3:28 p.m. Friday commit, the math works!

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="finalScore">
             <p class="finalRoll">Final roll: <span class="emptyValue"></span></p>
         </section>
-        <p class="wtf"><a href="https://en.wikipedia.org/wiki/D20_System"><em>What would I use this for?</em></a></p>
+        <p class="wtf"><a href="https://en.wikipedia.org/wiki/D20_System" target="_blank"><em>What would I use this for?</em></a></p>
         <footer>
             <p>Copyright © 2019 Jessica Chin</p>
         </footer>
