4:37 p.m. Friday commit- colours added, link styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Roll a D20!</title>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Slab:100,400,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab:100,400,700&display=swap" rel="stylesheet"> 
     <link type="image/png" href="assets/favicon-2.png" rel="icon">
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://kit.fontawesome.com/7b8d56d327.js"></script>
@@ -28,7 +28,7 @@
         <section class="modifier">
             <form action="" input type="number">
                 <select name="modifierMenu">
-                    <option value="null">Add a modifier</option>
+                    <option value="0">Add a modifier</option>
                     <option class="modifierNumber" value="-5">-5</option>
                     <option class="modifierNumber" value="-4">-4</option>
                     <option class="modifierNumber" value="-3">-3</option>
