--- a/index.html
+++ b/index.html
@@ -18,40 +18,42 @@
         <header>
             <h1><i class="fas fa-dice-d20"></i> Roll a D20! <i class="fas fa-dice-d20"></i></h1>
         </header>
-        <section class="d20 rotating">
-            <div class="d20Wrapper">
-                <div class="20SidedDie">
+        <main>
+            <section class="d20 rotating">
+                <div class="d20Wrapper">
+                    <div class="20SidedDie">
+                    </div>
                 </div>
-            </div>
-        </section>
-        <p class="clickPrompt"></p>
-        <section class="modifier">
-            <form action="" input type="number">
-                <select name="modifierMenu">
-                    <option value="0">Add a modifier</option>
-                    <option class="modifierNumber" value="-5">-5</option>
-                    <option class="modifierNumber" value="-4">-4</option>
-                    <option class="modifierNumber" value="-3">-3</option>
-                    <option class="modifierNumber" value="-2">-2</option>
-                    <option class="modifierNumber" value="-1">-1</option>
-                    <option class="modifierNumber" value="0">0</option>
-                    <option class="modifierNumber" value="1">+1</option>
-                    <option class="modifierNumber" value="2">+2</option>
-                    <option class="modifierNumber" value="3">+3</option>
-                    <option class="modifierNumber" value="4">+4</option>
-                    <option class="modifierNumber" value="5">+5</option>
-                    <option class="modifierNumber" value="6">+6</option>
-                    <option class="modifierNumber" value="7">+7</option>
-                    <option class="modifierNumber" value="8">+8</option>
-                    <option class="modifierNumber" value="9">+9</option>
-                    <option class="modifierNumber" value="10">+10</option>
-                </select>
-                <button type="submit">Add me!</button>
-            </form>
-        </section>
-        <section class="finalScore">
-            <p class="finalRoll">Final roll: <span class="emptyValue"></span></p>
-        </section>
+            </section>
+            <p class="clickPrompt"></p>
+            <section class="modifier">
+                <form action="" input type="number">
+                    <select name="modifierMenu">
+                        <option value="0">Add a modifier</option>
+                        <option class="modifierNumber" value="-5">-5</option>
+                        <option class="modifierNumber" value="-4">-4</option>
+                        <option class="modifierNumber" value="-3">-3</option>
+                        <option class="modifierNumber" value="-2">-2</option>
+                        <option class="modifierNumber" value="-1">-1</option>
+                        <option class="modifierNumber" value="0">0</option>
+                        <option class="modifierNumber" value="1">+1</option>
+                        <option class="modifierNumber" value="2">+2</option>
+                        <option class="modifierNumber" value="3">+3</option>
+                        <option class="modifierNumber" value="4">+4</option>
+                        <option class="modifierNumber" value="5">+5</option>
+                        <option class="modifierNumber" value="6">+6</option>
+                        <option class="modifierNumber" value="7">+7</option>
+                        <option class="modifierNumber" value="8">+8</option>
+                        <option class="modifierNumber" value="9">+9</option>
+                        <option class="modifierNumber" value="10">+10</option>
+                    </select>
+                    <button type="submit">Add me!</button>
+                </form>
+            </section>
+            <section class="finalScore">
+                <p class="finalRoll">Final roll: <span class="emptyValue"></span></p>
+            </section>
+        </main>
         <p class="wtf"><a href="https://en.wikipedia.org/wiki/D20_System" target="_blank"><em>What would I use this for?</em></a></p>
         <footer>
             <p>Copyright © 2019 Jessica Chin</p>
