--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <wrapper>
         <header>
-            <h1><i class="fas fa-dice-d20"></i> Roll a D20! <i class="fas fa-dice-d20"></i></h1>
+            <h1><i class="fas fa-dice-d20 icon1"></i> Roll a D20! <i class="fas fa-dice-d20 icon2"></i></h1>
         </header>
         <main>
             <section class="d20 rotating">
