--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Roll a D20!</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab:100,400,700&display=swap" rel="stylesheet"> 
-    <link type="image/png" href="assets/favicon-2.png" rel="icon">
+    <link type="image/png" href="assets/favicon-1.png" rel="icon">
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://kit.fontawesome.com/7b8d56d327.js"></script>
-    <script src="GLTFLoader.js"></script>
 </head>
 <body>
     <wrapper>
@@ -17,18 +16,15 @@
             <h1><i class="fas fa-dice-d20 icon1"></i> Roll a D20! <i class="fas fa-dice-d20 icon2"></i></h1>
         </header>
         <main>
-            <!-- <div class="clickPromptWrapper">
-                <p class="clickPrompt"></p>
-            </div> -->
-            <section class="d20 rotating">
-                <div class="d20Wrapper">
-                    <div class="20SidedDie"></div>
-                </div>
-            </section>
             <div class="mainText">
                 <div class="clickPromptWrapper">
                     <p class="clickPrompt"></p>
                 </div>
+                <section class="d20">
+                    <div class="d20Wrapper">
+                        <div class="20SidedDie rotating"><img src="assets/d20.png" alt="An icosahedron, or 20-sided polygon is used to represent a 20-sided die"></div>
+                    </div>
+                </section>
                 <section class="modifier">
                     <form action="" input type="number">
                         <select name="modifierMenu">
