--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                 <section class="modifier">
                     <form action="" input type="number">
                         <select name="modifierMenu">
-                            <option value="0">Add a modifier</option>
                             <option class="modifierNumber" value="-5">-5</option>
                             <option class="modifierNumber" value="-4">-4</option>
                             <option class="modifierNumber" value="-3">-3</option>
@@ -46,7 +45,7 @@
                             <option class="modifierNumber" value="9">+9</option>
                             <option class="modifierNumber" value="10">+10</option>
                         </select>
-                        <button type="submit">Add me!</button>
+                        <button type="submit">Add a modifier</button>
                     </form>
                 </section>
                 <section class="finalScore">
@@ -54,7 +53,7 @@
                 </section>
             </div>
         </main>
-        <p class="wtf"><a href="https://en.wikipedia.org/wiki/D20_System" target="_blank"><em>What would I use this for?</em></a></p>
+        <p class="wtf"><a href="https://en.wikipedia.org/wiki/D20_System" target="_blank">(What would I use this for?)</a></p>
         <footer>
             <p>Copyright © 2019 Jessica Chin</p>
         </footer>
